--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "yorubot",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "repository": "https://github.com/Jotis1/yorubot.git",
+  "author": "Jotis1 <cuellarjotis@gmail.com>",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.4.1"
+    "dev:watch": "nodemon --watch **/*.ts --exec ts-node index.ts"
   },
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.1",
+    "nodemon": "^3.0.3"
   }
 }
